Done with nav and eyes follow

--- a/src/style.css
+++ b/src/style.css
@@ -4,29 +4,45 @@
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 
 /* 
 Colors
      #50c879  #ff7e66
 #009f6b 007f56
-Complimentary
+accent Complimentary:#45cea2 #ff8f51
 ef50000 F2854e
+sham #45cea2
+sean #45b29a
 */
 
+
+/* Nav bar */
+
 .nav {
-    display: flex;
+    padding: 40px;
+    background: #e0ebe8;
 }
 
 .nav-logo {
     font-family: Lato, sans-serif;
-    padding: 0.5rem;
-    border: 1px solid #21564b;
+    font-size: 20px;
+    font-style: oblique;
+    padding: 1.5rem;
+    border: 1px solid #45b29a;
     border-radius: 50%;
     text-align: center;
+    margin: 100px;
+    color: #45cea2;
 }
 
 .nav-ul {
     display: flex;
+    justify-content: flex-end;
+    margin-right: 2em;
 }
 
 .nav-list {
@@ -35,18 +51,60 @@ ef50000 F2854e
 
 .nav-items {
     font-family: Lato, sans-serif;
+    font-style: oblique;
     text-decoration: none;
     padding: 0.5em;
-    font-size: 18px;
-    font-style: normal;
+    font-size: 20px;
     font-weight: 300;
     letter-spacing: 2px;
     line-height: 24px;
-    color: #50c879;
-    text-align: center;
+    color: #45cea2;
+    align-self: center;
 }
 
 .nav-items:hover,
-nav-items:active {
-    color: #21564b;
+.nav-logo:hover {
+    color: #030303;
+}
+
+
+/* Eyes follow */
+
+.eyes {
+    top: 25%;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    padding: 1em;
+    margin: 2em;
+}
+
+.eye {
+    width: 60px;
+    height: 30px;
+    background: #fff;
+    display: inline-block;
+    margin: 20px;
+    /*   border: 1px solid #e0ebe8; */
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+}
+
+.ball {
+    width: 10px;
+    height: 10px;
+    background: rgba(0, 0, 0, 0.87);
+    position: absolute;
+    border: 10px solid #45cea2;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.img {
+    height: 100vh;
+    width: 100vw;
+    background: url(./img/a-water-falls-in-a-mountain-forest-2892007.jpg) no-repeat center center fixed;
 }
