--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 :root {
     --hl-clr: #45b29a;
     --text-pry: #092545;
+    --text-sec: #fff;
     --act-clr: #ff9f63;
     --bg-pry: #fff;
     --bg-sec: #e0ebe8;
@@ -102,7 +103,7 @@ sean #45b29a
 .ball {
     width: 10px;
     height: 10px;
-    background: rgba(0, 0, 0, 0.87);
+    background: var(--text-pry);
     position: absolute;
     border: 10px solid var(--act-clr);
     border-radius: 50%;
@@ -111,8 +112,47 @@ sean #45b29a
     transform: translate(-50%, -50%);
 }
 
-.img {
+
+/* Hero section */
+
+.hero {
     height: 100vh;
     width: 100vw;
     background: url(./img/a-water-falls-in-a-mountain-forest-2892007.jpg) no-repeat center center fixed;
+    text-align: center;
+    font-family: Lato, sans-serif;
+    color: var(--text-sec);
 }
+
+.time {
+    font-size: 5rem;
+    font-weight: 600;
+}
+
+.greeting {
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 4px;
+    line-height: 58px;
+}
+
+#description {
+    margin: 20px;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 2px;
+    line-height: 24px;
+}
+
+
+/* 
+.content-1 {
+font-family: Lato, sans-serif;
+font-size: 20px;
+font-style: normal;
+font-weight: 300;
+letter-spacing: 2px;
+line-height: 36px;
+text-transform: none;
+color: #2E2E2E;
+} */
