Troubleshooting images to build

--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,7 @@ sean #45b29a
 /* Hero section */
 
 .hero {
+    /* background: url('../src/img/bonfire-burning-camp-campfire-1368382.jpg') no-repeat center center fixed; */
     height: 100vh;
     width: 100vw;
     text-align: center;
