--- a/src/style.css
+++ b/src/style.css
@@ -45,14 +45,14 @@ sean #45b29a
     border: 1px solid var(--text-pry);
     border-radius: 50%;
     text-align: center;
-    margin: 100px;
+    margin: 80px;
     color: var(--text-pry)
 }
 
 .nav-ul {
     display: flex;
     justify-content: flex-end;
-    margin-right: 2em;
+    margin: auto 2em auto 0;
 }
 
 .nav-list {
@@ -86,8 +86,7 @@ sean #45b29a
     width: 100%;
     text-align: center;
     padding: 0.2em;
-    margin-top: 25px;
-    margin-bottom: 20px;
+    margin-top: 5px;
 }
 
 .eye {
@@ -118,6 +117,7 @@ sean #45b29a
 /* Hero section */
 
 .hero {
+    /* background: url("./img/hero/a-water-falls-in-a-mountain-forest-2892007.jpg"); */
     display: flex;
     flex-direction: column;
     justify-content: center;
