--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,10 @@ body {
     overflow-x: hidden;
 }
 
+button {
+    cursor: pointer;
+}
+
 
 /* 
 Colors
@@ -382,22 +386,38 @@ sean #45b29a
 }
 
 .contact-form {
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3rem;
+    margin-top: 4rem;
 }
 
 .contact-card {
     width: 80vw;
     height: 80vh;
     border-radius: 18px;
+    padding: 1rem;
     background: #fff;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     text-align: center;
+}
+
+.lets-talk {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-btn {
     margin: 1rem;
+}
+
+.hiring {
+    height: 20%;
 }
 
 
