--- a/src/style.css
+++ b/src/style.css
@@ -404,13 +404,15 @@ sean #45b29a
     background: #fff;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     text-align: center;
+    font-size: 1rem;
 }
 
 .lets-talk {
     height: 50vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
+    margin: 1rem;
 }
 
 .hiring {
@@ -418,12 +420,28 @@ sean #45b29a
 }
 
 .contact-btn {
-    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .icon {
-    height: 50px;
-    width: 50px;
+    height: 2em;
+    width: 2em;
+    margin: 1rem;
+}
+
+
+/* 
+.contact-text {
+    margin: 0 1rem;
+} */
+
+.clipboard {
+    position: absolute;
+    bottom: .7rem;
+    right: 1.7rem;
 }
 
 
