--- a/src/style.css
+++ b/src/style.css
@@ -49,26 +49,32 @@ sean #45b29a
 /* Nav bar */
 
 .nav {
-    padding: 2.5rem;
-    /*  background: var(--bg-sec); */
-}
-
-.nav-logo {
+    display: flex;
+    padding: 1rem;
     font-family: Lato, sans-serif;
-    font-size: 20px;
-    font-style: italic;
-    padding: 1.5rem;
-    border: 1px solid var(--text-pry);
-    border-radius: 50%;
-    text-align: center;
-    margin: 80px;
-    color: var(--text-pry)
+    background: linear-gradient(1790deg, var(--hl-clr) 20%, var(--act-clr) 100%);
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    color: var(--text-sec);
+    z-index: 1000;
 }
 
 .nav-ul {
     display: flex;
     justify-content: flex-end;
-    margin: auto 2em auto 0;
+    margin: auto;
+}
+
+.nav-logo {
+    font-size: 1rem;
+    font-style: italic;
+    padding: 1.5rem;
+    border: 1px solid var(--text-pry);
+    border-radius: 50%;
+    text-align: center;
+    margin: 0.5rem;
 }
 
 .nav-list {
@@ -77,21 +83,21 @@ sean #45b29a
 
 .nav-items {
     font-family: Lato, sans-serif;
-    font-style: oblique;
     text-decoration: none;
     padding: 0.5em;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 300;
     letter-spacing: 2px;
     line-height: 24px;
-    color: #030303;
     align-self: center;
+    color: var(--text-sec);
 }
 
-.nav-items:hover,
+
+/* .nav-items:hover,
 .nav-logo:hover {
     color: var(--text-pry);
-}
+} */
 
 
 /* Eyes follow
@@ -144,6 +150,7 @@ sean #45b29a
     color: var(--text-sec);
     font-family: 'Lato', sans-serif;
     font-style: italic;
+    padding-top: 4rem;
 }
 
 .time {
@@ -207,6 +214,7 @@ sean #45b29a
     display: flex;
     flex-direction: column;
     margin-top: 4rem;
+    padding-top: 4rem;
 }
 
 .cards {
@@ -260,7 +268,7 @@ sean #45b29a
 }
 
 .cards-three {
-    background: linear-gradient(90deg, #9CD4ED 0%, #0D0D0F 70%);
+    background: linear-gradient(90deg, #9CD4ED 0%, #0B1C27 70%);
 }
 
 .card-pic-five {
@@ -294,7 +302,7 @@ sean #45b29a
 }
 
 .cards-five {
-    background: linear-gradient(90deg, #5DA2B7 20%, #F2CDD2 90%);
+    background: linear-gradient(90deg, #5DA2B7 20%, #697D8A 90%);
 }
 
 .card-pic-nine {
@@ -311,8 +319,34 @@ sean #45b29a
 }
 
 .cards-info {
-    margin: 0 4em;
+    margin: 0 4rem;
+    padding: 1rem;
     color: var(--text-sec);
+    width: 20rem;
+    height: 22rem;
+    border-radius: 18px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    text-align: center;
+    font-size: 1.1rem;
+    line-height: 1.2rem;
+}
+
+.cards-info>h1 {
+    margin: 1rem;
+    padding: 0.5rem;
+}
+
+.info-icons {
+    height: 3rem;
+    width: 3rem;
+    margin: 2rem 1rem;
+}
+
+
+/* Achievements */
+
+.achieve {
+    height: 100vh;
 }
 
 
@@ -320,6 +354,7 @@ sean #45b29a
 
 .reasons {
     margin-top: 4rem;
+    padding-top: 7rem;
     width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -338,6 +373,7 @@ sean #45b29a
     margin: 2rem;
     transition: 0.5s ease;
     cursor: pointer;
+    color: var(--text-pry);
 }
 
 .reasons-card-img {
@@ -408,6 +444,8 @@ sean #45b29a
     min-height: 100vh;
     margin-top: 4rem;
     align-items: center;
+    color: var(--text-pry);
+    padding-top: 8rem;
 }
 
 .hiring {
@@ -489,6 +527,12 @@ sean #45b29a
     vertical-align: middle;
 }
 
+.down-icon {
+    height: 2rem;
+    width: 2rem;
+    vertical-align: middle;
+}
+
 .message-icon {
     height: 2rem;
     width: 2rem;
@@ -516,6 +560,7 @@ sean #45b29a
 }
 
 .footer {
+    color: var(--text-pry);
     height: 15rem;
     width: 100vw;
     background-color: #FF8344;
@@ -523,9 +568,17 @@ sean #45b29a
     padding: 2rem;
 }
 
+.footer>p {
+    margin-top: 1rem;
+}
+
+.footer>p>a {
+    text-decoration: none;
+}
+
 .copy-icon {
-    height: 3rem;
-    width: 3rem;
+    height: 2rem;
+    width: 2rem;
     vertical-align: middle;
 }
 
