--- a/src/style.css
+++ b/src/style.css
@@ -52,27 +52,14 @@ sean #45b29a
     display: flex;
     padding: 1rem;
     font-family: Lato, sans-serif;
-    /* background: linear-gradient(90deg, var(--hl-clr) 40%, var(--act-clr) 70%); */
-    /* background: rgba(56, 211, 159, .7) */
-    background: linear-gradient(90deg, rgba(56, 211, 159, 0.5) 40%, rgba(255, 143, 87, 0.5) 70%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0) 100%);
     position: fixed;
     width: 100vw;
     top: 0;
     left: 0;
     color: var(--text-sec);
     z-index: 1000;
-    /* box-shadow: 0px 40px 0px rgba(0, 0, 0, 0.0); */
-    ;
-}
-
-.border_gradient {
-    border: 8px solid transparent;
-    -moz-border-bottom-colors: #897048 #917953 #a18a66 #b6a488 #c5b59b #d4c5ae #e2d6c4 #eae1d2;
-    -moz-border-top-colors: #897048 #917953 #a18a66 #b6a488 #c5b59b #d4c5ae #e2d6c4 #eae1d2;
-    -moz-border-left-colors: #897048 #917953 #a18a66 #b6a488 #c5b59b #d4c5ae #e2d6c4 #eae1d2;
-    -moz-border-right-colors: #897048 #917953 #a18a66 #b6a488 #c5b59b #d4c5ae #e2d6c4 #eae1d2;
-    padding: 5px 5px 5px 15px;
-    width: 100%;
+    font-weight: 500;
 }
 
 .nav-ul {
@@ -82,9 +69,9 @@ sean #45b29a
 }
 
 .nav-logo {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-style: italic;
-    padding: 1.5rem;
+    padding: 1.6rem;
     border: 1px solid var(--text-pry);
     border-radius: 50%;
     text-align: center;
@@ -97,69 +84,25 @@ sean #45b29a
 }
 
 .nav-link>a {
+    font-family: Lato, sans-serif;
+    text-decoration: none;
+    padding: 0 0.6rem;
+    border-radius: 18px;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    line-height: 24px;
+    align-self: center;
+    color: var(--text-sec);
+    /* Linear gradient hack */
     background-image: linear-gradient(90deg, transparent 50%, #6DB357 50%);
     background-size: 200%;
-    transition: background-position 0.5s linear;
+    transition: background-position 0.3s linear;
 }
 
 .nav-link>a:hover {
     /* Push the background a 100% of it's width */
     background-position: -100%;
 }
-
-.nav-items {
-    font-family: Lato, sans-serif;
-    text-decoration: none;
-    padding: 0 0.6rem;
-    border-radius: 18px;
-    font-size: 1.5rem;
-    font-weight: 300;
-    letter-spacing: 2px;
-    line-height: 24px;
-    align-self: center;
-    color: var(--text-sec);
-}
-
-
-/* .nav-items:hover,
-.nav-logo:hover {
-    color: var(--text-pry);
-} */
-
-
-/* Eyes follow
-
-.eyes {
-    transform: translateY(-70%);
-    width: 100%;
-    text-align: center;
-}
-
-.eye {
-    width: 65px;
-    height: 35px;
-    background: var(--bg-pry);
-    display: inline-block;
-    margin: 5px;
-    border: 1px solid #e0ebe8;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-}
-
-.ball {
-    width: 1.5rem;
-    height: 1.5rem;
-    padding: 0.1rem;
-    background: var(--text-pry);
-    position: absolute;
-    border: 8px solid var(--act-clr);
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
- */
 
 
 /* Hero section */
