--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ sean #45b29a
     display: flex;
     padding: 1rem;
     font-family: Lato, sans-serif;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 20%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0.1) 100%);
     position: fixed;
     width: 100vw;
     top: 0;
@@ -69,10 +69,11 @@ sean #45b29a
     display: flex;
     justify-content: flex-end;
     margin: auto;
+    padding-left: 10rem;
 }
 
 .nav-logo {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-style: italic;
     padding: 1.6rem;
     border: 1px solid var(--text-pry);
@@ -91,7 +92,9 @@ sean #45b29a
     text-decoration: none;
     padding: 0 0.6rem;
     border-radius: 18px;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    font-style: oblique;
+    font-weight: 600;
     letter-spacing: 2px;
     line-height: 24px;
     align-self: center;
@@ -241,7 +244,7 @@ sean #45b29a
 }
 
 .cards-three {
-    background: linear-gradient(90deg, #9CD4ED 0%, #0B1C27 70%);
+    background: linear-gradient(90deg, #9CD4ED 0%, #837673 70%);
 }
 
 .card-pic-five {
@@ -310,9 +313,15 @@ sean #45b29a
 }
 
 .info-icons {
+    margin: 2rem 1rem;
     height: 3rem;
     width: 3rem;
-    margin: 2rem 1rem;
+    transition: 0.5s ease-in-out;
+}
+
+.info-icons:hover {
+    transform: scale(1.2);
+    transition: all 0.5s ease-in-out;
 }
 
 
@@ -349,9 +358,15 @@ sean #45b29a
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     text-align: center;
     margin: 2rem;
-    transition: 0.5s ease;
     cursor: pointer;
     color: var(--text-pry);
+    transition: 0.3s ease
+}
+
+.reasons-card:hover {
+    transform: scale(1.07);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+    transition: transform 0.3s ease;
 }
 
 
@@ -408,11 +423,6 @@ sean #45b29a
 
 .reasons-footer-even {
     background: #FF8344;
-}
-
-.reasons-card:hover {
-    transform: scale(1.07);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
 
@@ -533,29 +543,46 @@ sean #45b29a
 
 .social-icon {
     margin: 2rem;
-}
-
-.social-icon {
     height: 3rem;
     width: 3rem;
+    transition: 0.5s ease;
+}
+
+.social-icon:hover {
+    transform: scale(1.4);
+    transition: all 0.5s ease;
 }
 
 .footer {
     color: var(--text-sec);
-    height: 15rem;
+    min-height: 16rem;
     width: 100vw;
-    background-color: rgba(56, 211, 159, 0.85);
+    background-color: #38d39f;
     text-align: center;
-    padding: 2rem;
-    font-size: 1.1rem;
+    font-weight: 400;
+    font-size: 1.2rem;
+    padding: 1rem;
 }
 
 .footer>p {
-    margin-top: 1rem;
+    padding: 1rem;
 }
 
 .footer>p>a {
     text-decoration: none;
+    color: var(--text-sec);
+    font-style: oblique;
+    font-weight: 700;
+    background-image: linear-gradient(90deg, transparent 50%, #6DB357 50%);
+    background-size: 200%;
+    transition: background-position 0.3s linear;
+    border-radius: 18px;
+    padding: 0 0.2rem;
+    text-transform: capitalize;
+}
+
+.footer>p>a:hover {
+    background-position: -100%;
 }
 
 .copy-icon {
