--- a/src/style.css
+++ b/src/style.css
@@ -255,7 +255,7 @@ sean #45b29a
 .card-pic-six {
     position: absolute;
     top: 12.5rem;
-    left: 30rem;
+    left: 28rem;
     height: 22rem;
     width: 22rem;
 }
@@ -291,7 +291,7 @@ sean #45b29a
     width: 26rem;
     position: absolute;
     top: 9.5rem;
-    left: 30rem;
+    left: 27rem;
 }
 
 .cards-info {
@@ -299,12 +299,11 @@ sean #45b29a
     padding: 1rem;
     color: var(--text-sec);
     width: 20rem;
-    height: 22rem;
+    min-height: 22rem;
     border-radius: 18px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     text-align: center;
     font-size: 1.1rem;
-    line-height: 1.2rem;
 }
 
 .cards-info>h1 {
@@ -381,7 +380,7 @@ sean #45b29a
 }
 
 .reasons-card-img-two {
-    background: url('./img/reasons/undraw_designer_life_w96d.svg') no-repeat center center / cover;
+    background: url('./img/reasons/undraw_reviewed_docs_neeb.svg') no-repeat center center / cover;
 }
 
 .reasons-card-img-three {
@@ -393,11 +392,11 @@ sean #45b29a
 }
 
 .reasons-card-img-five {
-    background: url('./img/reasons/undraw_dream_world_cin1.svg') no-repeat center center / cover;
+    background: url('./img/reasons/undraw_web_developer_p3e5o.svg') no-repeat center center / cover;
 }
 
 .reasons-card-img-six {
-    background: url('./img/reasons/undraw_interaction_design_odgc.svg') no-repeat center center / cover;
+    background: url('./img/reasons/undraw_team_spirit_hrr4.svg') no-repeat center center / cover;
 }
 
 .reasons-card-text {
@@ -407,8 +406,14 @@ sean #45b29a
     height: 40%;
 }
 
-.reasons-card-text h2 {
+.reasons-card-text>h2 {
     font-family: Lato sans-serif;
+}
+
+.reasons-card-text>p {
+    padding: 2rem;
+    font-size: 1rem;
+    letter-spacing: 2px;
 }
 
 .reasons-footer {
@@ -557,7 +562,7 @@ sean #45b29a
     color: var(--text-sec);
     min-height: 16rem;
     width: 100vw;
-    background-color: #38d39f;
+    background: linear-gradient(90deg, #38d39f 30%, #6DB357 70%);
     text-align: center;
     font-weight: 400;
     font-size: 1.2rem;
