--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ sean #45b29a
     display: flex;
     padding: 1rem;
     font-family: Lato, sans-serif;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4) 20%, rgba(0, 0, 0, 0.2) 100%);
     position: fixed;
     width: 100vw;
     top: 0;
@@ -111,6 +111,93 @@ sean #45b29a
     background-position: -100%;
 }
 
+/* responsiveness */
+@media screen and (max-width: 1024px) {
+    nav {
+        position: relative; 
+    }
+
+    .hamburger {
+        position: absolute;
+        cursor: pointer;
+        right: 5%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+    }
+
+    .line {
+        width: 40px;
+        height: 5px;
+        background: white;
+        margin: 5px;
+        transition: all 0.6s ease-in-out;
+    }
+
+.nav-logo {
+    z-index: 2;
+}
+
+    .nav-ul {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        background: #38D39F;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+        clip-path: circle(0px at 90% 10%);
+        -webkit-clip-path:circle(0px at 90% 10%);
+        transition: all 1s ease-in-out;
+        pointer-events: none;
+    }
+   
+    .nav-ul.open {
+        clip-path: circle(2000px at 90% 10%);
+       -webkit-clip-path: circle(2000px at 90% 10%);
+       pointer-events: all;
+    }
+    .nav-ul>li {
+        opacity: 0;
+    }
+    .nav-ul>li:nth-child(1) {
+        transition: all 0.5s ease 0.1s;
+    }
+    .nav-ul>li:nth-child(2) {
+        transition: all 0.5s ease 0.2s;
+    }
+    .nav-ul>li:nth-child(3) {
+        transition: all 0.5s ease 0.3s;
+    }
+    .nav-ul>li:nth-child(4) {
+        transition: all 0.5s ease 0.4s;
+    }
+    .nav-ul>li:nth-child(5) {
+        transition: all 0.5s ease 0.5s;
+    }
+    .nav-ul>li:nth-child(6) {
+        transition: all 0.5s ease 0.6s;
+    }
+    .nav-ul>li.fade {
+        opacity: 1;
+    }
+    .transparent {
+        opacity: 0;
+    }
+    .rotateOne {
+    
+        transform: translateY(6px) rotate(45deg);
+        transition: all 0.5s 0.1s ease-in-out ;
+    }
+    .rotateTwo {
+
+        transform: translateY(-5px) rotate(-45deg);
+        transition: all 0.5s 0.1s ease-in-out ;
+    }
+}
 
 /* Hero section */
 
