--- a/src/style.css
+++ b/src/style.css
@@ -160,28 +160,28 @@ sean #45b29a
        -webkit-clip-path: circle(2000px at 90% 10%);
        pointer-events: all;
     }
-    .nav-ul>li {
+    .nav.items {
         opacity: 0;
     }
-    .nav-ul>li:nth-child(1) {
+    .nav.items:nth-child(1) {
         transition: all 0.5s ease 0.1s;
     }
-    .nav-ul>li:nth-child(2) {
+    .nav-items:nth-child(2) {
         transition: all 0.5s ease 0.2s;
     }
-    .nav-ul>li:nth-child(3) {
+    .nav-items:nth-child(3) {
         transition: all 0.5s ease 0.3s;
     }
-    .nav-ul>li:nth-child(4) {
+    .nav-items:nth-child(4) {
         transition: all 0.5s ease 0.4s;
     }
-    .nav-ul>li:nth-child(5) {
+    .nav-items:nth-child(5) {
         transition: all 0.5s ease 0.5s;
     }
-    .nav-ul>li:nth-child(6) {
+    .nav-items:nth-child(6) {
         transition: all 0.5s ease 0.6s;
     }
-    .nav-ul>li.fade {
+    .nav-items.fade {
         opacity: 1;
     }
     .transparent {
