--- a/src/style.css
+++ b/src/style.css
@@ -279,15 +279,23 @@ sean #45b29a
     flex-direction: column;
     margin-top: 1rem;
     padding-top: 0;
+  
 }
 
 .cards {
     /* margin-top: 1rem; */
     display: flex;
-    height: 110vh;
+    min-height: 100vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .cards {
+        flex-direction: column;
+        padding-bottom: 2rem;
+    }
 }
 
 .cards-one {
@@ -411,6 +419,9 @@ sean #45b29a
     transform: scale(1.2);
     transition: all 0.5s ease-in-out;
 }
+
+
+/* mobile */
 
 
 /* Achievements */
