tweaking mobile responsiveness

--- a/src/style.css
+++ b/src/style.css
@@ -302,6 +302,13 @@ sean #45b29a
         height: 16rem;
         width: 16rem;
     }
+    .card-pic-two {
+        position: absolute;
+        left: 28rem;
+        top: 11.8rem;
+        height: 10rem;
+        width: 10rem;
+    }
 }
 
 .cards-one {
