--- a/src/style.css
+++ b/src/style.css
@@ -291,35 +291,29 @@ sean #45b29a
     align-items: center;
 }
 
+/* @media screen and (max-width: 1200px) */
+
 @media screen and (max-width: 1024px) {
     .cards {
         flex-direction: column;
-        padding-bottom: 2rem;
+       padding-bottom: 2rem;
     }
 
-    .card-pic-one {
-        /*   padding: 0 2px 0 2px; */
-        height: 16rem;
-        width: 16rem;
-    }
-    .card-pic-two {
-        position: absolute;
-        left: 28rem;
-        top: 11.8rem;
-        height: 10rem;
-        width: 10rem;
-    }
+}
+
+.cards-main {
+    position: relative;
+    margin: 0 4rem;
+}
+
+.cards-main-four {
+    margin: 0 2rem;
 }
 
 .cards-one {
     background: linear-gradient(89deg, #ff5edf 0%, #04c8de 80%);
 }
 
-.cards-main {
-    position: relative;
-    display: flex;
-    margin: 0 5em;
-}
 
 .card-pic-one {
     /*   padding: 0 2px 0 2px; */
@@ -405,7 +399,7 @@ sean #45b29a
 } */
 
 .cards-info {
-    margin: 0 4rem;
+    margin: 0 3rem;
     padding: 1rem;
     color: var(--text-sec);
     width: 20rem;
