--- a/src/style.css
+++ b/src/style.css
@@ -291,23 +291,49 @@ sean #45b29a
     align-items: center;
 }
 
-/* @media screen and (max-width: 1200px) */
 
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 1100px) {
     .cards {
+     
         flex-direction: column;
        padding-bottom: 2rem;
+    }
+
+    .cards-info {
+        flex: 3;
+        margin: 0 ;
+        padding: 1rem;
+        width: 40rem;
+        /* min-height: 22rem;
+        border-radius: 18px;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+        text-align: center;
+        font-size: 1.1rem; */
+        
     }
 
 }
 
 .cards-main {
     position: relative;
+   
+}
+
+.cards-main-one {
     margin: 0 4rem;
 }
 
-.cards-main-four {
-    margin: 0 2rem;
+cards-main-two {
+    margin: 0 3rem;
+}
+
+.cards-main-three {
+    margin: 0 4rem;
+}
+
+.cards-main-four, .cards-main-five {
+    margin: 0 1rem;
 }
 
 .cards-one {
@@ -408,6 +434,7 @@ sean #45b29a
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
     text-align: center;
     font-size: 1.1rem;
+    
 }
 
 .cards-info>h1 {
